# skipbo

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEV.md  readme.md  results.csv  results.csv.rerun  train_ppo.sh
.claude/: claude.md
ai/: CMakeLists.txt
ai/include/ai/: determinizer.h  heuristic_player.h  heuristic_random_discard_player.h  mcts_node.h  mcts_player.h  neural_net.h  nn_encoding.h  nn_mcts_player.h  nn_policy_player.h  pimc_player.h  player.h  ppo_player.h  random_player.h  rules_player.h  turn_action.h
ai/src/: determinizer.cpp  heuristic_player.cpp  heuristic_random_discard_player.cpp  mcts_node.cpp  mcts_player.cpp  neural_net.cpp  nn_encoding.cpp  nn_mcts_player.cpp  nn_policy_player.cpp  pimc_player.cpp  ppo_player.cpp  random_player.cpp  rules_player.cpp  turn_action.cpp
ai/tests/: CMakeLists.txt  test_determinizer.cpp  test_random_player.cpp
engine/: CMakeLists.txt
engine/include/engine/: card.h  deck.h  game.h  game_state.h  move.h  rules.h
engine/src/: card.cpp  deck.cpp  game.cpp  game_state.cpp  move.cpp  rules.cpp
engine/tests/: CMakeLists.txt  test_card.cpp  test_deck.cpp  test_game.cpp  test_game_state.cpp  test_rules.cpp
scripts/: build-native.sh  build-wasm.sh  do_build.sh
server/: main.py  requirements.txt
server/models/: networks.py  training_loop.py
server/ppo/: encoding.py  game_env.py  networks.py  train.py
server/routers/: datasets.py  generations.py  ppo_training.py  training.py
server/utils/: storage.py
tournament/: CMakeLists.txt  main.cpp
tournament/src/: elo.cpp  match.cpp  tournament.cpp
wasm/: CMakeLists.txt  bindings.cpp  wasm_api.h
web/: .gitignore  DEV_SERVER.md  index.html
web/src/: App.tsx  index.css
(+23 files in other folders)
